# myself_chatroom_distribute

./: .gitignore  CLEANUP_SUMMARY.md  LOGIC_MIGRATION_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  cloude_deploy.sh  docker-compose.yml  local_start.sh  package-lock.json
client/web/: .dockerignore  .env.development  Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
client/web/__tests__/pages/: index.tsx
client/web/__tests__/pages/__snapshots__/: chat.tsx.snap  index.tsx.snap  login.tsx.snap
client/web/components/: App.css  ChatRoomSection.tsx  CustomModal.tsx  EmailInput.tsx  FormCard.tsx  Head.tsx  Header.tsx  Message.tsx  MessageInputBar.tsx  NameAvatar.tsx  PasswordInput.tsx  RoomEntry.tsx  UsernameInput.tsx
client/web/lib/: apiTypes.ts
client/web/pages/: chat.tsx  index.tsx  login.tsx
client/web/styles/: Home.module.css  globals.css
client/web1/: tsconfig.json
client/web1/components/: MessageInputBar.tsx  PasswordInput.tsx  UsernameInput.tsx
client/web1/pages/: chat.tsx  index.tsx
client/web2/: package-lock.json  package.json
client/web2/__tests__/pages/: chat.tsx
client/web2/components/: EmailInput.tsx  PasswordInput.tsx
client/web2/lib/: api.ts
client/web2/pages/: login.tsx
client/web4/__tests__/pages/: chat.tsx
client/web4/__tests__/pages/__snapshots__/: chat.tsx.snap
client/web4/components/: Header.tsx  Message.tsx  MessageInputBar.tsx  RoomEntry.tsx
client/web4/lib/: api.ts  apiSerialization.ts  apiTypes.ts
client/web4/pages/: chat.tsx  index.tsx  login.tsx
client/web4/styles/: Home.module.css
deploy/: .env  docker-compose-no-init.yml  docker-compose.yml
docs/: update_records.md
nginx/: nginx.conf
scripts/: config_to_cloude_server.sh  kafka_start_down.sh  push_all_images.sh  push_chatroom_image.sh  push_job_image.sh  push_logic_image.sh  push_middleware_images.sh  push_project_all_images.sh  push_web_image.sh
server/: 0voice_chatroom.sql  CMakeLists.txt  Dockerfile  create_tables.sql  start.sh
server/application/: CMakeLists.txt  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md
server/application/chat-room/: CMakeLists.txt  Dockerfile  chat-room.conf  distributed_integration.cc  main.cc  main.cc.v1
server/application/chat-room/api/: api_common.cc  api_common.h  api_message.cc  api_message.h  api_register.cc  api_register.h  api_room.cc  api_room.h  api_types.h
server/application/chat-room/redis/: cache_pool.cc
server/application/chat-room/rpc/: ChatRoom.Comet.pb.cc  ChatRoom.Comet.proto  ChatRoom.Protocol.pb.h  comet_service.cc  comet_service.h
server/application/chat-room/service/: http_conn.cc  http_conn.h  http_handler.h  http_parser_wrapper.h  logic_client.cc  logic_client.h  logic_config.cc  logic_config.h  pub_sub_service.cc  pub_sub_service.h  websocket_conn.cc  websocket_conn.h
server/application/chat-room/test/: README.md  api_msg_benchmark.cc  api_msg_benchmark_init.cc  dbserver.conf  redis.conf  redis_stream_benchmark.cc
server/application/chat-room1/: CMakeLists.txt  chat-room.conf  main.cc
server/application/chat-room1/api/: api_common.cc  api_common.h  api_login.cc  api_msg.cc  api_register.cc
server/application/chat-room1/mysql/: db_pool.h
server/application/chat-room1/service/: http_conn.cc  http_conn.h  http_handler.h  pub_sub_service.h  websocket_conn.cc  websocket_conn.h
server/application/chat-room2/: CMakeLists.txt  main.cc
server/application/chat-room2/api/: api_common.cc  api_login.cc  api_login.h
server/application/chat-room2/service/: http_conn.cc
server/application/client/: CMakeLists.txt  README.md  main.cc  ws_client.h  ws_perf_test.h
server/application/client_perf/: CMakeLists.txt  README.md  config_manager.cc  config_manager.h  main.cc  users.ini  ws_client.h
server/application/job/: CMakeLists.txt  ChatRoom.Comet.pb.cc  ChatRoom.Comet.pb.h  ChatRoom.Job.pb.cc  Dockerfile  job.conf  kafka_consumer.cc  main.cc
server/application/job/proto/: ChatRoom.Comet.grpc.pb.cc  ChatRoom.Comet.grpc.pb.h  ChatRoom.Protocol.grpc.pb.cc  ChatRoom.Protocol.grpc.pb.h  ChatRoom.Protocol.pb.cc  ChatRoom.Protocol.pb.h
server/application/logic/: CMakeLists.txt  CMakeLists_v1.txt  Dockerfile  kafka_producer.cpp  logic.conf  main.cc
server/application/logic/api/: api_auth.cc  api_auth.h  api_common.cc  api_common.h  api_login.cc  api_login.h  api_message.cc  api_message.h  api_register.cc  api_register.h  api_room.cc  api_room.h  api_types.h
server/application/logic/base/: base64.h
server/application/logic/doc/: API_DOCUMENTATION.md  CMAKE_ANALYSIS.md  DIRECTORY_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  ROOM_SERVICE_INTEGRATION.md
server/application/logic/muduo/base/: CMakeLists.txt  ThreadPool.h
server/application/logic/muduo/net/: CMakeLists.txt
server/application/logic/mysql/: db_pool.cc  db_pool.h
server/application/logic/proto/: ChatRoom.Job.pb.h  ChatRoom.Job.proto
server/application/logic/redis/: cache_pool.cc  cache_pool.h
server/application/logic/service/: http_parser.h  kafka_producer.cpp  message_service.cc  message_service.h  room_service.cc  room_service.h
server/sql_scripts/: create_tables.sql  manage_authorized_users.sql
